website/websites/gp4/code/meteor-scala-4.log
BUILD COMMANDS FOR: meteor.scala-4.scala

Wed Mar 21 11:41:20 PDT 2007

( if [ ! -d meteor.scala-4.scala_run ] ; then mkdir meteor.scala-4.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/meteor/meteor.scala-4.scala meteor.scala-4.scala_run/meteor.scala
( cd meteor.scala-4.scala_run ; /opt/scala-2.4.0/bin/scalac meteor.scala )
meteor.scala:38: error: recursive value unplaced needs type
   { unplaced ++= Iterator.range(0,unplaced.capacity) }
     ^
meteor.scala:37: error: not found: type $anon
   val unplaced = new BitSet(pieces.length)
                  ^
two errors found
make[3]: [meteor.scala-4.scala_run] Error 1 (ignored)
touch meteor.scala-4.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath meteor.scala-4.scala_run meteor %A
************************************************************
*   TEST (meteor.scala-4.scala_run) FAILED - ERROR:  meteor.scala-4.scala_out differs from Output.2098
************************************************************
-rw-r--r-- 1 dunham users 254 Nov 14 16:55 Output.2098
-rw-r--r-- 1 dunham users  21 Mar 21 11:41 meteor.scala-4.scala_out


PROGRAM OUTPUT
==============
no such file: meteor
